--- a/backend/GMCmanager/templates/manager/manager_forecast.html
+++ b/backend/GMCmanager/templates/manager/manager_forecast.html
@@ -219,7 +219,7 @@
               <select id="timeRange">
                 <option value="7">Last 7 Days</option>
                 <option value="30">Last 30 Days</option>
-                <option value="90">Next Month</option>
+                <option value="90">Next 90 Days</option>
               </select>
             </div>
             <div class="forecast-actions">
